// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide tag when the show prop is false 1`] = `
"<view class=\\"nut-tag nut-tag--default\\" show=\\"false\\">
  <!--v-if-->
</view>"
`;

exports[`should render textColor correctly 1`] = `
"<view class=\\"nut-tag nut-tag--default nut-tag--plain\\" style=\\"background: red; color: blue;\\">
  <!--v-if-->
</view>"
`;
